--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-DB_HOST=127.0.0.1:3306
+DB_HOST=localhost
+DB_PORT=3306
 DB_NAME=u437094107_viandas_sch00l
-DB_USER='u437094107_adm111n'
+DB_USER=u437094107_adm111n
 DB_PASS=9t:RuQ7^nr+/
 
 SMTP_HOST=smtp.hostinger.com
